<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="title">Title</string>
    <string name="input_title_hint">Enter a title for the crime</string>
    <string name="details">Details</string>
    <string name="tools_date">Wed Nov 14 11:56 EST 2018</string>
    <string name="solved">Solved</string>
    <string name="crime_report">%1$s
        The crime was discovered on %2$s. %3$s, and %4$s. </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The the is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send Crime report via</string>
    <string name="new_crime">New Crime</string>
    <string name="choose_suspect">Choose suspect</string>
    <string name="send_crime_report">Send crime report</string>
</resources>